--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_HelloPartial.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_HelloPartial.cshtml
@@ -1,6 +1,15 @@
 ﻿@if (Request.IsAuthenticated)
 {
-    <p>
-        Hello, @Html.ActionLink(User.Identity.Name, "Manage", "Account", routeValues: null, htmlAttributes: new { @class = "username", title = "Manage" })!
-    </p>
+    if (Model.Advertiser.Advertiser_Id == 207)
+    {
+    <p style="text-align: center">
+        <img src="~/Images/logoAHS.png" />
+    </p>               
+    }
+    else
+    {
+    <p style="text-align: center; margin-top: 30px">
+        <span>Hello, @Html.ActionLink(User.Identity.Name, "Manage", "Account", routeValues: null, htmlAttributes: new { @class = "username", title = "Manage" })!</span>
+    </p>          
+    }
 }
