--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_LoginPartial.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_LoginPartial.cshtml
@@ -3,6 +3,10 @@
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" }))
     {
     @Html.AntiForgeryToken()
+        if (Model.Advertiser.Advertiser_Id == 207)
+        {
+    <span style="margin-right: 20px">Hello, @Html.ActionLink(User.Identity.Name, "Manage", "Account", routeValues: null, htmlAttributes: new { @class = "username", title = "Manage" })!</span>          
+        }
     <a class="button" href="javascript:document.getElementById('logoutForm').submit()">Log off</a>
     }
 }
