contacts & logo for itt & tree

--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Contact.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Contact.cshtml
@@ -1,10 +1,6 @@
 ﻿@model ClientPortal.Data.Contexts.CakeAdvertiser
 @{
-    var email = "jennifer@directagents.com";
-    if (Model.Advertiser_Id == 207) {
-        email = "lyles@directagents.com";
-        Model.AccountManagerName = "Lyle Srebnick, SVP";
-    }
+    var email = "info@directagents.com";
 }
 
 <h3>Contact</h3>
