--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_LoginPartial.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,12 +1,14 @@
-﻿@if (Request.IsAuthenticated)
+﻿@model ClientPortal.Web.Models.IndexModel
+
+@if (Request.IsAuthenticated)
 {
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" }))
     {
-    @Html.AntiForgeryToken()
-        if (Model.Advertiser.Advertiser_Id == 207)
+        @Html.AntiForgeryToken()
+        if (!String.IsNullOrWhiteSpace(Model.LogoImage))
         {
-    <span style="margin-right: 20px">Hello, @Html.ActionLink(User.Identity.Name, "Manage", "Account", routeValues: null, htmlAttributes: new { @class = "username", title = "Manage" })!</span>          
+            <span style="margin-right: 20px">Hello, @Html.ActionLink(User.Identity.Name, "Manage", "Account", routeValues: null, htmlAttributes: new { @class = "username", title = "Manage" })!</span>          
         }
-    <a class="button" href="javascript:document.getElementById('logoutForm').submit()">Log off</a>
+        <a class="button" href="javascript:document.getElementById('logoutForm').submit()">Log off</a>
     }
 }
