--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Contact.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Contact.cshtml
@@ -1,7 +1,4 @@
-﻿@model ClientPortal.Data.Contexts.CakeAdvertiser
-@{
-    var email = "info@directagents.com";
-}
+﻿@model IEnumerable<ClientPortal.Data.Contexts.Contact>
 
 <h3>Contact</h3>
 
@@ -15,12 +12,16 @@
                 <b>P:</b> 212-925-6558<br />
                 <b>F:</b> 212-412-9061<br />
                 <br />
-                <b>Account Manager</b><br />
-                <div style="float: left; width: 65px; padding: 5px; padding-top: 0px; padding-left: 10px;">
-                    <img style="border: 2px solid #000;" width="65" src="~/Images/avatar.png">
-                </div>
-                @Model.AccountManagerName<br />
-                <a href="mailto:@email">@email</a>
+                <b>Account Team</b>
+
+                @foreach(var contact in Model) {
+                    <br style="clear: both" />
+                    <div style="float: left; width: 65px; padding: 5px; padding-top: 0px; padding-left: 10px;">
+                        <img style="border: 2px solid #000;" width="65" src="~/Images/avatar.png">
+                    </div>
+                    @contact.FirstName @contact.LastName<text>,</text> @contact.Title<br />
+                    <a href="mailto:@contact.Email">@contact.Email</a>
+                }
             </td>
         </tr>
     </table>
