--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Advertisers/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Advertisers/Index.cshtml
@@ -39,6 +39,7 @@
         </td>
         <td>
             @Ajax.ActionLink("Edit", "Edit", new { id=item.AdvertiserId }, ajaxOptions) |
+            @Ajax.ActionLink("Edit Contacts", "EditContacts", new { id=item.AdvertiserId }, ajaxOptions) |
             @Ajax.ActionLink("Details", "Details", new { id=item.AdvertiserId }, ajaxOptions) |
             @Ajax.ActionLink("Delete", "Delete", new { id=item.AdvertiserId }, ajaxOptions)
         </td>
