admin- logo & login

--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Advertisers/Details.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Advertisers/Details.cshtml
@@ -29,10 +29,10 @@
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.LogoFilename)
+         @Html.DisplayNameFor(model => model.Logo)
     </div>
     <div class="display-field">
-        @Html.DisplayFor(model => model.LogoFilename)
+        <img src="@Url.Action("Logo", new { id = Model.AdvertiserId })" />
     </div>
 </fieldset>
 <p>
