--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Contacts/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Contacts/Index.cshtml
@@ -10,12 +10,12 @@
 }
 
 <p>
-    @Ajax.ActionLink("Create New", "Create", ajaxOptions)
+    @Ajax.ActionLink("Create New Contact", "Create", ajaxOptions)
 </p>
 <table>
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.ContactId)
+            Id
         </th>
         <th>
             @Html.DisplayNameFor(model => model.FirstName)
