--- a/3/ClientPortal.Web/ClientPortal.Web/Content/portal.css
+++ b/3/ClientPortal.Web/ClientPortal.Web/Content/portal.css
@@ -143,3 +143,10 @@ footer.row {
 {
     overflow-y: auto;
 }
+
+.display-label, .editor-label label {
+    font-weight: bold;
+}
+.editor-field, .display-field {
+    margin-bottom: 12px;
+}
