--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Advertisers/Delete.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Advertisers/Delete.cshtml
@@ -25,10 +25,10 @@
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.LogoFilename)
+         @Html.DisplayNameFor(model => model.Logo)
     </div>
     <div class="display-field">
-        @Html.DisplayFor(model => model.LogoFilename)
+        <img src="@Url.Action("Logo", new { id = Model.AdvertiserId })" />
     </div>
 </fieldset>
 @using (Ajax.BeginForm(new AjaxOptions { UpdateTargetId = "advertisersTab" }))
