--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_LoginPartial.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_LoginPartial.cshtml
@@ -5,7 +5,7 @@
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" }))
     {
         @Html.AntiForgeryToken()
-        if (!String.IsNullOrWhiteSpace(Model.LogoImage))
+        if (Model.HasLogo)
         {
             <span style="margin-right: 20px">Hello, @Html.ActionLink(User.Identity.Name, "Manage", "Account", routeValues: null, htmlAttributes: new { @class = "username", title = "Manage" })!</span>          
         }
